--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="id-ID">
 <head>
 	<meta charset="UTF-8">
@@ -141,7 +141,7 @@ Produsen Kolam Terpal <span style="color:#EBEC0B">Terbaik</span> dan <span style
 								<div class="elementor-element elementor-element-3ac2f22 elementor-align-justify elementor-widget elementor-widget-button" data-id="3ac2f22" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://jualkolamterpalmurah.com/wa" target="_blank" class="elementor-button-link elementor-button elementor-size-sm" role="button">
+			<a href="https://wa.me/6281393740111?text=Min+Saya+mau+pesan+kolam+terpal+di+Abdan+Terpal" target="_blank" class="elementor-button-link elementor-button elementor-size-sm" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fab fa-whatsapp"></i>			</span>
@@ -378,7 +378,7 @@ Produsen Kolam Terpal <span style="color:#EBEC0B">Terbaik</span> dan <span style
 				<div class="elementor-element elementor-element-fe57ac1 elementor-align-center elementor-widget elementor-widget-button" data-id="fe57ac1" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://jualkolamterpalmurah.com/wa" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<a href="https://wa.me/6281393740111?text=Min+Saya+mau+pesan+kolam+terpal+di+Abdan+Terpal" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fab fa-whatsapp"></i>			</span>
@@ -506,7 +506,7 @@ Produsen Kolam Terpal <span style="color:#EBEC0B">Terbaik</span> dan <span style
 				<div class="elementor-element elementor-element-17ad961 elementor-align-center elementor-widget elementor-widget-button" data-id="17ad961" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://jualkolamterpalmurah.com/wa" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<a href="https://wa.me/6281393740111?text=Min+Saya+mau+pesan+kolam+terpal+di+Abdan+Terpal" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fab fa-whatsapp"></i>			</span>
@@ -634,7 +634,7 @@ Produsen Kolam Terpal <span style="color:#EBEC0B">Terbaik</span> dan <span style
 				<div class="elementor-element elementor-element-4da32c9 elementor-align-center elementor-widget elementor-widget-button" data-id="4da32c9" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://jualkolamterpalmurah.com/wa" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<a href="https://wa.me/6281393740111?text=Min+Saya+mau+pesan+kolam+terpal+di+Abdan+Terpal" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fab fa-whatsapp"></i>			</span>
@@ -786,7 +786,7 @@ Produsen Kolam Terpal <span style="color:#EBEC0B">Terbaik</span> dan <span style
 				<div class="elementor-element elementor-element-993cd3d elementor-align-center elementor-widget elementor-widget-button" data-id="993cd3d" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://jualkolamterpalmurah.com/wa" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<a href="https://wa.me/6281393740111?text=Min+Saya+mau+pesan+kolam+terpal+di+Abdan+Terpal" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fab fa-whatsapp"></i>			</span>
@@ -887,7 +887,7 @@ Produsen Kolam Terpal <span style="color:#EBEC0B">Terbaik</span> dan <span style
 				<div class="elementor-element elementor-element-27bb94b elementor-align-center elementor-widget elementor-widget-button" data-id="27bb94b" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://jualkolamterpalmurah.com/wa" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<a href="https://wa.me/6281393740111?text=Min+Saya+mau+pesan+kolam+terpal+di+Abdan+Terpal" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fab fa-whatsapp"></i>			</span>
@@ -988,7 +988,7 @@ Produsen Kolam Terpal <span style="color:#EBEC0B">Terbaik</span> dan <span style
 				<div class="elementor-element elementor-element-d7e7ec8 elementor-align-center elementor-widget elementor-widget-button" data-id="d7e7ec8" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://jualkolamterpalmurah.com/wa" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<a href="https://wa.me/6281393740111?text=Min+Saya+mau+pesan+kolam+terpal+di+Abdan+Terpal" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fab fa-whatsapp"></i>			</span>
@@ -1093,7 +1093,7 @@ Produsen Kolam Terpal <span style="color:#EBEC0B">Terbaik</span> dan <span style
 				<div class="elementor-element elementor-element-9dee26e elementor-align-center elementor-widget elementor-widget-button" data-id="9dee26e" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://jualkolamterpalmurah.com/wa" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<a href="https://wa.me/6281393740111?text=Min+Saya+mau+pesan+kolam+terpal+di+Abdan+Terpal" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fab fa-whatsapp"></i>			</span>
@@ -1194,7 +1194,7 @@ Produsen Kolam Terpal <span style="color:#EBEC0B">Terbaik</span> dan <span style
 				<div class="elementor-element elementor-element-5857eab elementor-align-center elementor-widget elementor-widget-button" data-id="5857eab" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://jualkolamterpalmurah.com/wa" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<a href="https://wa.me/6281393740111?text=Min+Saya+mau+pesan+kolam+terpal+di+Abdan+Terpal" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fab fa-whatsapp"></i>			</span>
@@ -1295,7 +1295,7 @@ Produsen Kolam Terpal <span style="color:#EBEC0B">Terbaik</span> dan <span style
 				<div class="elementor-element elementor-element-7547a90 elementor-align-center elementor-widget elementor-widget-button" data-id="7547a90" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://jualkolamterpalmurah.com/wa" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<a href="https://wa.me/6281393740111?text=Min+Saya+mau+pesan+kolam+terpal+di+Abdan+Terpal" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fab fa-whatsapp"></i>			</span>
@@ -1400,7 +1400,7 @@ Produsen Kolam Terpal <span style="color:#EBEC0B">Terbaik</span> dan <span style
 				<div class="elementor-element elementor-element-e49773d elementor-align-center elementor-widget elementor-widget-button" data-id="e49773d" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://jualkolamterpalmurah.com/wa" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<a href="https://wa.me/6281393740111?text=Min+Saya+mau+pesan+kolam+terpal+di+Abdan+Terpal" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fab fa-whatsapp"></i>			</span>
@@ -1501,7 +1501,7 @@ Produsen Kolam Terpal <span style="color:#EBEC0B">Terbaik</span> dan <span style
 				<div class="elementor-element elementor-element-00cf022 elementor-align-center elementor-widget elementor-widget-button" data-id="00cf022" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://jualkolamterpalmurah.com/wa" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<a href="https://wa.me/6281393740111?text=Min+Saya+mau+pesan+kolam+terpal+di+Abdan+Terpal" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fab fa-whatsapp"></i>			</span>
@@ -1740,7 +1740,7 @@ Produsen Kolam Terpal <span style="color:#EBEC0B">Terbaik</span> dan <span style
 				<div class="elementor-element elementor-element-e29c32a elementor-align-center elementor-widget elementor-widget-button" data-id="e29c32a" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://jualkolamterpalmurah.com/join-reseller" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<a href="https://wa.me/6281393740111?text=Min+Saya+mau+Join+Reseller+kolam+terpal+di+Abdan+Terpal" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fab fa-whatsapp"></i>			</span>
@@ -1906,7 +1906,7 @@ Produsen Kolam Terpal <span style="color:#EBEC0B">Terbaik</span> dan <span style
 											</a>
 									</li>
 								<li class="elementor-icon-list-item">
-											<a href="https://jualkolamterpalmurah.com/wa">
+											<a href="https://wa.me/6281393740111?text=Min+Saya+mau+pesan+kolam+terpal+di+Abdan+Terpal">
 
 												<span class="elementor-icon-list-icon">
 							<i aria-hidden="true" class="fab fa-whatsapp"></i>						</span>
@@ -1959,7 +1959,7 @@ Produsen Kolam Terpal <span style="color:#EBEC0B">Terbaik</span> dan <span style
 								<div class="elementor-element elementor-element-d54481c elementor-align-center elementor-widget elementor-widget-button" data-id="d54481c" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://jualkolamterpalmurah.com/wa" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<a href="https://wa.me/6281393740111?text=Min+Saya+mau+pesan+kolam+terpal+di+Abdan+Terpal" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fab fa-whatsapp"></i>			</span>
