--- a/index.html
+++ b/index.html
@@ -1966,6 +1966,13 @@ Produsen Kolam Terpal <span style="color:#EBEC0B">Terbaik</span> dan <span style
 						<span class="elementor-button-text">Pesan Sekarang</span>
 		</span>
 					</a>
+						<a href="https://tokopedia.link/abdanterpal-1" target="_blank" style="background-color:green" class="elementor-button-link elementor-button elementor-size-md" role="button">
+						<span class="elementor-button-content-wrapper">
+						<span class="elementor-button-icon elementor-align-icon-left">
+				<i aria-hidden="true" class="fas fa-shopping-bag"></i>			</span>
+						<span class="elementor-button-text">Pesan Sekarang</span>
+		</span>
+					</a>
 		</div>
 				</div>
 				</div>
