--- a/index.html
+++ b/index.html
@@ -1970,7 +1970,7 @@ Produsen Kolam Terpal <span style="color:#EBEC0B">Terbaik</span> dan <span style
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fas fa-shopping-bag"></i>			</span>
-						<span class="elementor-button-text">Pesan Sekarang</span>
+						<span class="elementor-button-text">Cek di TokoPedia</span>
 		</span>
 					</a>
 		</div>
