--- a/index.html
+++ b/index.html
@@ -1948,7 +1948,7 @@ Produsen Kolam Terpal <span style="color:#EBEC0B">Terbaik</span> dan <span style
 		</div>
 							</div>
 		</section>
-				<section class="elementor-section elementor-top-section elementor-element elementor-element-e5a9570 floating-button elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="e5a9570" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+				<section style="z-index:9999" class="elementor-section elementor-top-section elementor-element elementor-element-e5a9570 floating-button elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="e5a9570" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
 						<div class="elementor-container elementor-column-gap-default">
 					<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-dd6d38f" data-id="dd6d38f" data-element_type="column">
 			<div class="elementor-widget-wrap elementor-element-populated">
@@ -1966,7 +1966,7 @@ Produsen Kolam Terpal <span style="color:#EBEC0B">Terbaik</span> dan <span style
 						<span class="elementor-button-text">Pesan Sekarang</span>
 		</span>
 					</a>
-						<a href="https://tokopedia.link/abdanterpal-1" target="_blank" style="background-color:#EBEC4F" class="elementor-button-link elementor-button elementor-size-md" role="button">
+						<a href="https://tokopedia.link/abdanterpal-1" target="_blank" style="background-color:#EBEC4F; color:#000; margin-top:10px" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fas fa-shopping-bag"></i>			</span>
